--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     </head>
     <body>
         <h1>Jina Butkovic's CSCE 190 Site</h1>
+
+        <section class="assingment">
+            <img src="images/problem statement screenshot.png">
+        </section>
     </body>
 </html>
