--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <h1>Jina Butkovic's CSCE 190 Site</h1>
 
         <section class="assingment">
-            <img src="images/problem statement screenshot.png">
+            <img src="images/problem statement screenshot.pdf">
         </section>
     </body>
 </html>
