--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
         <h1>Jina Butkovic's CSCE 190 Site</h1>
 
         <section class="assingment">
-            <img src="images/problem statement screenshot.pdf">
+            <a href="files/Problem Statement.pdf"><img src="images/problem statement screenshot.png"></a>
+            <section class="ass-details">
+                 <a href="files/Problem Statement.pdf"><h2>Problem Statement: Water Bottle Stations</h2></a>
+                <p>
+                    Our users are experiencing frustration while trying to find safe and clean water bottle refilling stations around college campuses. Our solution is to provide the users with a map of their college campus with points on the map that show water bottle refilling stations.
+                </p>
+                <a href="files/Problem Statement.pdf">Problem Statement pdf</a>
         </section>
     </body>
 </html>
