--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <h1>Jina Butkovic's CSCE 190 Site</h1>
 
+        <!-- Problem Statement Assignment-->
         <section class="assingment">
             <a href="files/Problem Statement.pdf"><img src="images/problem statement screenshot.png"></a>
             <section class="ass-details">
@@ -13,7 +14,16 @@
                 <p>
                     Our users are experiencing frustration while trying to find safe and clean water bottle refilling stations around college campuses. Our solution is to provide the users with a map of their college campus with points on the map that show water bottle refilling stations.
                 </p>
-                <a href="files/Problem Statement.pdf">Problem Statement pdf</a>
+        </section>
+
+        <section class="assingment">
+            <!-- Affinity Diagram Assignment -->
+            <a href="files/affinity-diagram.pdf"><img src="images/affinity-diagram.png"></a>
+            <section class="ass-details">
+                 <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: Water Bottle Stations</h2></a>
+                <p>
+                    My group and I worked to come up with many different components we'd like to have on our website.
+                </p>
         </section>
     </body>
 </html>
