--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>CSCE 190: Jina Butkovic</title>
+        <link rel="stylesheet" href="styles.css"
     </head>
     <body>
         <h1>Jina Butkovic's CSCE 190 Site</h1>
