--- a/index.html
+++ b/index.html
@@ -2,29 +2,44 @@
 <html>
     <head>
         <title>CSCE 190: Jina Butkovic</title>
-        <link rel="stylesheet" href="styles.css"
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Jina Butkovic's CSCE 190 Site</h1>
 
         <!-- Problem Statement Assignment-->
-        <section class="assingment">
+        <section class= "assignment">
             <a href="files/Problem Statement.pdf"><img src="images/problem statement screenshot.png"></a>
             <section class="ass-details">
                  <a href="files/Problem Statement.pdf"><h2>Problem Statement: Water Bottle Stations</h2></a>
                 <p>
                     Our users are experiencing frustration while trying to find safe and clean water bottle refilling stations around college campuses. Our solution is to provide the users with a map of their college campus with points on the map that show water bottle refilling stations.
                 </p>
+            </section>
         </section>
-
-        <section class="assingment">
-            <!-- Affinity Diagram Assignment -->
+        
+        <!-- Affinity Diagram Assignment -->
+        <section class= "assignment"> 
             <a href="files/affinity-diagram.pdf"><img src="images/affinity-diagram.png"></a>
             <section class="ass-details">
                  <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: Water Bottle Stations</h2></a>
                 <p>
                     My group and I worked to come up with many different components we'd like to have on our website.
                 </p>
+            </section>
         </section>
+
+
+    <!-- Persona Assignment -->
+    <section class= "assignment"
+        <a href="files/csce_190_persona (1).pdf"><img src="images/persona.png"></a>
+        <section class="ass-details">
+             <a href="files/csce_190_persona (1).pdf"><h2>Persona: 4 Personas for Water Bottle Stations </h2></a>
+            <p>
+                Four personas comprised of typical water bottle refilling app users.
+            </p>
+    
+        </section>
+    </section>
     </body>
 </html>
