--- a/index.html
+++ b/index.html
@@ -41,5 +41,17 @@
     
         </section>
     </section>
+
+       <!-- Storyboard Assignment -->
+       <section class= "assignment"
+       <a href="files/story-board.pdf"><img src="images/storyboard.png"></a>
+       <section class="ass-details">
+            <a href="files/story-board.pdf"><h2>Storyboard: 4 Personas for Water Bottle Stations </h2></a>
+           <p>
+               A display of comics to show how our app works for the average water drinker.
+           </p>
+   
+       </section>
+   </section>
     </body>
 </html>
