--- a/index.html
+++ b/index.html
@@ -53,5 +53,17 @@
    
        </section>
    </section>
+
+    <!-- Sketches Assignment -->
+    <section class= "assignment"
+    <a href="files/sketches.pdf"><img src="images/sketch.png"></a>
+    <section class="ass-details">
+         <a href="files/sketches.pdf"><h2>Sketches: Water Bottle Filling App</h2></a>
+        <p>
+            Sketches of what my group's app would potentially look like.
+        </p>
+
+    </section>
+</section>
     </body>
 </html>
