--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         
             <!-- Problem Statement Assignment-->
             <section class= "assignment">
+                <a href="files/Problem Statement.pdf"><h2>Problem Statement: Water Bottle Stations</h2></a>
                 <a href="files/Problem Statement.pdf"><img src="images/problem statement screenshot.png"></a>
                 <section class="ass-details">
-                    <a href="files/Problem Statement.pdf"><h2>Problem Statement: Water Bottle Stations</h2></a>
                     <p>
                         Our users are experiencing frustration while trying to find safe and clean water bottle refilling stations around college campuses. Our solution is to provide the users with a map of their college campus with points on the map that show water bottle refilling stations.
                     </p>
@@ -21,9 +21,9 @@
                     
             <!-- Affinity Diagram Assignment -->
             <section class= "assignment"> 
+                <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: Water Bottle Stations</h2></a>
                 <a href="files/affinity-diagram.pdf"><img src="images/affinity-diagram.png"></a>
                 <section class="ass-details">
-                    <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: Water Bottle Stations</h2></a>
                     <p>
                         My group and I worked to come up with many different components we'd like to have on our website.
                     </p>
@@ -33,9 +33,9 @@
 
             <!-- Persona Assignment -->
             <section class= "assignment"
+                <a href="files/csce_190_persona (1).pdf"><h2>Persona: 4 Personas for Water Bottle Stations </h2></a>
                 <a href="files/csce_190_persona (1).pdf"><img src="images/persona.png"></a>
                 <section class="ass-details">
-                    <a href="files/csce_190_persona (1).pdf"><h2>Persona: 4 Personas for Water Bottle Stations </h2></a>
                     <p>
                         Four personas comprised of typical water bottle refilling app users.
                     </p>
@@ -44,9 +44,9 @@
 
             <!-- Storyboard Assignment -->
             <section class= "assignment"
+                <a href="files/story-board.pdf"><h2>Storyboard: 4 Personas for Water Bottle Stations </h2></a>
                 <a href="files/story-board.pdf"><img src="images/storyboard.png"></a>
                 <section class="ass-details">
-                    <a href="files/story-board.pdf"><h2>Storyboard: 4 Personas for Water Bottle Stations </h2></a>
                     <p>
                         A display of comics to show how our app works for the average water drinker.
                     </p>
@@ -55,9 +55,9 @@
 
             <!-- Sketches Assignment -->
             <section class= "assignment"
+                <a href="files/sketches.pdf"><h2>Sketches: Water Bottle Filling App</h2></a>
                 <a href="files/sketches.pdf"><img src="images/sketch.png"></a>
                 <section class="ass-details">
-                    <a href="files/sketches.pdf"><h2>Sketches: Water Bottle Filling App</h2></a>
                     <p>
                         Sketches of what my group's app would potentially look like.
                     </p>
@@ -66,11 +66,22 @@
 
             <!-- Paper Prototype Assignment -->
             <section class= "assignment"
-                <a href="https://youtu.be/BitLc3cpkfc"><img src="images/AppVideo.png"></a>
+                <a href="https://youtu.be/BitLc3cpkfc"><h2>Paper Prototype: Water Bottle Filling App</h2></a> 
+                <a href="https://youtu.be/BitLc3cpkfc"><img src="images/appvideo.png"></a>
                 <section class="ass-details">
-                    <a href="https://youtu.be/BitLc3cpkfc"><h2>Paper Prototype: Water Bottle Filling App</h2></a>
                     <p>
                         A video of a drawn version of how our app would function.
+                    </p>
+                </section>
+            </section>
+
+            <!-- Usibility Testing Script Assignment -->
+            <section class= "assignment"
+            <a href="files/Usability Testing Script_ Water Bottle Stations.pdf"><h2>Usability Testing: Water Bottle Filling App</h2></a>
+            <a href="files/Usability Testing Script_ Water Bottle Stations.pdf"><img src="images/usibilityTestingScreenshot.png"></a>
+                <section class="ass-details">
+                    <p>
+                        Various tasks to complete the outcome of usability tests.
                     </p>
                 </section>
             </section>
