--- a/index.html
+++ b/index.html
@@ -12,22 +12,18 @@
             <section class= "assignment">
                 <a href="files/Problem Statement.pdf"><h2>Problem Statement: Water Bottle Stations</h2></a>
                 <a href="files/Problem Statement.pdf"><img src="images/problem statement screenshot.png"></a>
-                <section class="ass-details">
                     <p>
                         Our users are experiencing frustration while trying to find safe and clean water bottle refilling stations around college campuses. Our solution is to provide the users with a map of their college campus with points on the map that show water bottle refilling stations.
                     </p>
-                </section>
             </section>
                     
             <!-- Affinity Diagram Assignment -->
             <section class= "assignment"> 
                 <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: Water Bottle Stations</h2></a>
                 <a href="files/affinity-diagram.pdf"><img src="images/affinity-diagram.png"></a>
-                <section class="ass-details">
                     <p>
                         My group and I worked to come up with many different components we'd like to have on our website.
                     </p>
-                </section>
             </section>
 
 
@@ -35,55 +31,54 @@
             <section class= "assignment"
                 <a href="files/csce_190_persona (1).pdf"><h2>Persona: 4 Personas for Water Bottle Stations </h2></a>
                 <a href="files/csce_190_persona (1).pdf"><img src="images/persona.png"></a>
-                <section class="ass-details">
                     <p>
                         Four personas comprised of typical water bottle refilling app users.
                     </p>
-                </section>
             </section>
 
             <!-- Storyboard Assignment -->
             <section class= "assignment"
                 <a href="files/story-board.pdf"><h2>Storyboard: 4 Personas for Water Bottle Stations </h2></a>
                 <a href="files/story-board.pdf"><img src="images/storyboard.png"></a>
-                <section class="ass-details">
                     <p>
                         A display of comics to show how our app works for the average water drinker.
                     </p>
-                </section>
             </section>
 
             <!-- Sketches Assignment -->
             <section class= "assignment"
                 <a href="files/sketches.pdf"><h2>Sketches: Water Bottle Filling App</h2></a>
                 <a href="files/sketches.pdf"><img src="images/sketch.png"></a>
-                <section class="ass-details">
                     <p>
                         Sketches of what my group's app would potentially look like.
                     </p>
-                </section>
             </section>
 
             <!-- Paper Prototype Assignment -->
             <section class= "assignment"
                 <a href="https://youtu.be/BitLc3cpkfc"><h2>Paper Prototype: Water Bottle Filling App</h2></a> 
                 <a href="https://youtu.be/BitLc3cpkfc"><img src="images/appvideo.png"></a>
-                <section class="ass-details">
                     <p>
                         A video of a drawn version of how our app would function.
                     </p>
-                </section>
             </section>
 
             <!-- Usibility Testing Script Assignment -->
             <section class= "assignment"
             <a href="files/Usability Testing Script_ Water Bottle Stations.pdf"><h2>Usability Testing: Water Bottle Filling App</h2></a>
             <a href="files/Usability Testing Script_ Water Bottle Stations.pdf"><img src="images/usibilityTestingScreenshot.png"></a>
-                <section class="ass-details">
                     <p>
                         Various tasks to complete the outcome of usability tests.
                     </p>
-                </section>
+            </section>
+
+            <!-- Low-Fi Prototype -->
+            <section class= "assignment"
+            <a href="files/Water Bottle Refill App-html/index.html"><h2>Low-fi Prototype: Water Bottle Filling App</h2></a>
+            <a href="files/Water Bottle Refill App-html/index.html"><img src="images/lofi_prototype.png"></a>
+                    <p>
+                        A low-fi prototype of our water bottle app.
+                    </p>
             </section>
         </div>  
     </body>
