--- a/index.html
+++ b/index.html
@@ -77,9 +77,18 @@
             <a href="files/Water Bottle Refill App-html/index.html"><h2>Low-fi Prototype: Water Bottle Filling App</h2></a>
             <a href="files/Water Bottle Refill App-html/index.html"><img src="images/lofi_prototype.png"></a>
                     <p>
-                        A low-fi prototype of our water bottle app.
+                        A low fidelity prototype of our water bottle app.
                     </p>
             </section>
+
+             <!-- High-Fi Prototype -->
+             <section class= "assignment"
+             <a href="files/Water Bottle Refill App-html copy/index.html"><h2>High-fi Prototype: Water Bottle Filling App</h2></a>
+             <a href="files/Water Bottle Refill App-html copy/index.html"><img src="images/hifi_prototype.png"></a>
+                     <p>
+                         A high fidelity prototype of our water bottle app.
+                     </p>
+             </section>
         </div>  
     </body>
 </html>
