--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </p>
             </section>
 
-            <!-- Low-Fi Prototype -->
+            <!-- Low-Fi Prototype Assignment-->
             <section class= "assignment"
             <a href="files/Water Bottle Refill App-html/index.html"><h2>Low-fi Prototype: Water Bottle Filling App</h2></a>
             <a href="files/Water Bottle Refill App-html/index.html"><img src="images/lofi_prototype.png"></a>
@@ -81,12 +81,21 @@
                     </p>
             </section>
 
-             <!-- High-Fi Prototype -->
+             <!-- High-Fi Prototype Assignment-->
              <section class= "assignment"
              <a href="files/Water Bottle Refill App-html copy/index.html"><h2>High-fi Prototype: Water Bottle Filling App</h2></a>
              <a href="files/Water Bottle Refill App-html copy/index.html"><img src="images/hifi_prototype.png"></a>
                      <p>
                          A high fidelity prototype of our water bottle app.
+                     </p>
+             </section>
+
+             <!-- High-Fi Prototype Presentation Assignement -->
+             <section class= "assignment"
+             <a href="https://www.youtube.com/watch?v=wHqnHPTLWGY&feature=youtu.be"><h2>High-fi Prototype Presentation: Water Bottle Filling App</h2></a>
+             <a href="https://www.youtube.com/watch?v=wHqnHPTLWGY&feature=youtu.be"><img src="images/presentation.png"></a>
+                     <p>
+                         A high fidelity prototype presentation for our water bottle app.
                      </p>
              </section>
         </div>  
